src/objects/Audit__c.object
<CustomObject>
    <description>Holds Setup Audit Trail information</description>
    <fields>
        <fullName>Action__c</fullName>
        <description>Action</description>
        <label>Action</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Date__c</fullName>
        <description>Audit Date</description>
        <label>Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Delegate_User__c</fullName>
        <description>Delegate User</description>
        <label>Delegate User</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>FETA2.1__c</fullName>
        <label>FETA2</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>FETA3.1__c</fullName>
        <label>FETA3.1</label>
        <type>Date</type>
    </fields>
    <fields>
    
        <fullName>Section__c</fullName>
        <description>Section</description>
        <label>Section</label>
        <length>120</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>User__c</fullName>
        <description>User Email</description>
        <label>User</label>
        <type>Email</type>
    </fields>
    <label>Audit</label>
    <nameField>
        <displayFormat>AU-{0000}</displayFormat>
        <label>Audit ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Audits</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>